<resources>
    <string name="app_name">Speed Limit ADAS</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main_status">SpeedLimitADAS</string>
    <string name="kmh">km/h</string>
    <string name="avgspeed">Avg. Speed</string>
    <string name="km">km</string>
    <string name="distance">Distance</string>
    <string name="statistics">statistics</string>
    <string name="status">Status</string>
    <string name="properties">Properties</string>
    <string name="ip">IP</string>
    <string name="tmpip">127.0.0.1</string>
    <string name="start">Start</string>
    <string name="networkstatus">Network Status</string>
    <string name="checking">Checking...</string>
    <string name="nonetwork">No network available.. Try again later.</string>
    <string name="connected">Connected</string>
    <string name="speedLimit">Speed Limit</string>
    <string name="avglanespeed">Avg Lane Speed</string>
</resources>
