<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context="com.jsvgoncalves.speedlimitadas.MainStatusActivity">

    <!-- Left Panel -->
    <LinearLayout android:layout_width="250dp"
        android:layout_height="fill_parent"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:orientation="vertical"
        android:background="@color/panel_color">
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingTop="20dp"
            android:text="@string/status"
            android:textColor="@android:color/white"
            android:textSize="25sp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:paddingTop="20dp"
            android:paddingLeft="10dp"
            android:text="@string/speedLimit"
            android:textColor="@android:color/white"
            android:textSize="25sp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/tv_currentSpeedLimit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:paddingTop="10dp"
            android:paddingLeft="20dp"
            android:text="@string/kmh"
            android:textColor="@android:color/white"
            android:textSize="25sp"/>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:paddingTop="20dp"
            android:paddingLeft="10dp"
            android:text="@string/avglanespeed"
            android:textColor="@android:color/white"
            android:textSize="25sp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/tv_avglanespeed"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:paddingTop="10dp"
            android:paddingLeft="20dp"
            android:text="@string/kmh"
            android:textColor="@android:color/white"
            android:textSize="25sp"/>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:paddingTop="20dp"
            android:paddingLeft="10dp"
            android:text="@string/networkstatus"
            android:textColor="@android:color/white"
            android:textSize="25sp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/tv_networkStatus2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:paddingTop="10dp"
            android:paddingLeft="20dp"
            android:text="@string/connected"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="25sp"/>
    </LinearLayout>

    <!-- Right Panel -->
    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:paddingTop="0dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tv_currentSpeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="25dp"
            android:textSize="70sp"
            android:layout_gravity="center_horizontal"
            android:text="@string/kmh"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingTop="70dp"
            android:src="@mipmap/speed_50"
            />


    </LinearLayout>

</LinearLayout>
